Fixed the top of the page getting cut off

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html {
     transform: translate(50%, -50%);
     width: 75%;
     text-align: center;
+    height: 100%;
 }
 @font-face {
     font-family: 'PxPlus IBM VGA 8x16';
